--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "React Ecommerce",
+  "name": "e-commerce-with-react-and-redux",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
